finished without bonus

--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<p><a href="./../celebrities">Check out celebrities</a></p>
+
+<p><a href="./../movies">Check out movies</a></p>
