--- a/starter-code/views/celebrities/edit.hbs
+++ b/starter-code/views/celebrities/edit.hbs
@@ -1,4 +1,4 @@
-<h2>Add a new celebrity</h2>
+<h2>Edit a celebrity</h2>
 <form action="/celebrities/{{oneCelebrity._id}}" method="POST">
 <label for="">Name:</label>
   <input type="text" name="name">
