--- a/starter-code/views/celebrities/index.hbs
+++ b/starter-code/views/celebrities/index.hbs
@@ -4,7 +4,7 @@
 <form action="/celebrities/{{this._id}}/delete" method="POST">
 <button type="submit">Delete</button>
 </form>
-<a href="/{{this._id}}/edit">Edit</a>
+<a href="/celebrities/{{this._id}}/edit">Edit</a>
 {{/each}}
 
 
