--- a/starter-code/views/celebrities/edit.hbs
+++ b/starter-code/views/celebrities/edit.hbs
@@ -1,16 +1,13 @@
-<h2>Edit a celebrity</h2>
-<form action="/celebrities/{{oneCelebrity._id}}" method="POST">
-<label for="">Name:</label>
-  <input type="text" name="name">
+<h2>Edit a Celebrity</h2>
+<form action="/celebrities/{{oneCelebrity.id}}" method="POST">
+ <label for="">Name:</label>
+  <input type="text" name="name" value={{oneCelebrity.name}}>
 	<br>
-
   <label for="">Occupation:</label>
-  <input type="text" name="occupation">
+  <input type="text" name="occupation" {{oneCelebrity.occupation}}>
 	<br>
-
-  <label for="">Catch phrase:</label>
-  <input type="text" name="catchphrase">
+  <label for="">Catch Phrase</label>
+  <input type="text" name="catchPhrase" {{oneCelebrity.catchPhrase}}>
 	<br>
-
-  <button type="submit">EDIT CELEBRITY</button>
+  <button type="submit">EDIT</button>
 </form>
